--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,11 @@ services:
       - DB_PORT=49002
     volumes:
       - ./data/files:/app/files
+    deploy:
+      resources:
+        limits:
+          cpus: '0.1'
+          memory: 50M
     networks:
       static-network:
         ipv4_address: 1.1.2.3
